--- a/PerfectBrowser/HomeVC.xib
+++ b/PerfectBrowser/HomeVC.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -10,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeVC" customModule="PerfectBrowser" customModuleProvider="target">
             <connections>
+                <outlet property="adView" destination="g7d-yh-tan" id="TsG-7c-Bsi"/>
                 <outlet property="cleanView" destination="WHZ-Qk-tB4" id="mn7-pb-Gjc"/>
                 <outlet property="collection" destination="fNH-Z9-pX2" id="zD7-5d-Lgp"/>
                 <outlet property="contentView" destination="1cQ-az-GS2" id="ytF-hI-nQq"/>
@@ -35,8 +37,78 @@
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_top" translatesAutoresizingMaskIntoConstraints="NO" id="AMs-29-EdX">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="153"/>
                 </imageView>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g7d-yh-tan" customClass="GADNativeView" customModule="PerfectBrowser" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="75" width="393" height="0.0"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uJz-Gq-sWA">
+                            <rect key="frame" x="16" y="15" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="uJz-Gq-sWA" secondAttribute="height" multiplier="1:1" id="ABu-yH-vac"/>
+                                <constraint firstAttribute="width" constant="50" id="Mur-4Z-GJj"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6I-u2-Qek">
+                            <rect key="frame" x="76" y="21" width="171" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.086274509803921567" green="0.098039215686274508" blue="0.16862745098039217" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dka-t6-eua">
+                            <rect key="frame" x="76" y="48" width="191" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.59215686274509804" green="0.61960784313725492" blue="0.65490196078431373" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ad_tag" translatesAutoresizingMaskIntoConstraints="NO" id="nWO-BB-8qp">
+                            <rect key="frame" x="252" y="22.666666666666671" width="25" height="14"/>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mD2-qp-G6P">
+                            <rect key="frame" x="287" y="-17.333333333333336" width="90" height="35"/>
+                            <color key="backgroundColor" red="0.0" green="0.32549019607843138" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="90" id="QBh-kj-b24"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="20"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="f6I-u2-Qek" firstAttribute="top" secondItem="g7d-yh-tan" secondAttribute="top" constant="21" id="5Gx-as-zQP"/>
+                        <constraint firstItem="mD2-qp-G6P" firstAttribute="leading" secondItem="Dka-t6-eua" secondAttribute="trailing" constant="20" id="FHb-F6-laC"/>
+                        <constraint firstItem="mD2-qp-G6P" firstAttribute="centerY" secondItem="g7d-yh-tan" secondAttribute="centerY" id="KQr-ou-FGO"/>
+                        <constraint firstAttribute="height" id="Nll-vE-lM3"/>
+                        <constraint firstItem="nWO-BB-8qp" firstAttribute="centerY" secondItem="f6I-u2-Qek" secondAttribute="centerY" id="QFW-z0-hHW"/>
+                        <constraint firstItem="mD2-qp-G6P" firstAttribute="leading" secondItem="f6I-u2-Qek" secondAttribute="trailing" constant="40" id="Wv2-Ll-PO7"/>
+                        <constraint firstItem="nWO-BB-8qp" firstAttribute="leading" secondItem="f6I-u2-Qek" secondAttribute="trailing" constant="5" id="XYG-Of-3wF"/>
+                        <constraint firstItem="uJz-Gq-sWA" firstAttribute="top" secondItem="g7d-yh-tan" secondAttribute="top" constant="15" id="dA8-yu-KH1"/>
+                        <constraint firstItem="Dka-t6-eua" firstAttribute="top" secondItem="f6I-u2-Qek" secondAttribute="bottom" constant="10" id="kjS-Gj-hDS"/>
+                        <constraint firstAttribute="trailing" secondItem="mD2-qp-G6P" secondAttribute="trailing" constant="16" id="ogW-5f-DMc"/>
+                        <constraint firstItem="uJz-Gq-sWA" firstAttribute="leading" secondItem="g7d-yh-tan" secondAttribute="leading" constant="16" id="w2P-hQ-Mtd"/>
+                        <constraint firstItem="Dka-t6-eua" firstAttribute="leading" secondItem="uJz-Gq-sWA" secondAttribute="trailing" constant="10" id="xuu-U0-NfQ"/>
+                        <constraint firstItem="f6I-u2-Qek" firstAttribute="leading" secondItem="uJz-Gq-sWA" secondAttribute="trailing" constant="10" id="z8m-VE-oAy"/>
+                    </constraints>
+                    <connections>
+                        <outlet property="adTag" destination="nWO-BB-8qp" id="LXh-Or-2yV"/>
+                        <outlet property="heightConstraint" destination="Nll-vE-lM3" id="o3Y-mX-0XS"/>
+                        <outlet property="icon" destination="uJz-Gq-sWA" id="Heg-xe-Yew"/>
+                        <outlet property="install" destination="mD2-qp-G6P" id="Zll-yG-sGE"/>
+                        <outlet property="subTitle" destination="Dka-t6-eua" id="8eP-G3-lHd"/>
+                        <outlet property="title" destination="f6I-u2-Qek" id="H66-p0-Q0y"/>
+                    </connections>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ENC-2S-OZZ">
-                    <rect key="frame" x="20" y="83" width="353" height="50"/>
+                    <rect key="frame" x="20" y="91" width="353" height="50"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Seaech or enter address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="biZ-m6-5qy">
                             <rect key="frame" x="16" y="0.0" width="277" height="50"/>
@@ -84,19 +156,25 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                             <real key="value" value="12"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.29411764705882354" green="0.29803921568627451" blue="0.29411764705882354" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
                 <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KdR-CJ-YYl">
-                    <rect key="frame" x="20" y="143" width="353" height="4"/>
+                    <rect key="frame" x="20" y="151" width="353" height="4"/>
                 </progressView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1cQ-az-GS2">
-                    <rect key="frame" x="0.0" y="153" width="393" height="599"/>
+                    <rect key="frame" x="0.0" y="161" width="393" height="591"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_icon" translatesAutoresizingMaskIntoConstraints="NO" id="xFn-5m-cpD">
-                            <rect key="frame" x="128.66666666666666" y="20" width="135.99999999999997" height="200"/>
+                            <rect key="frame" x="128.66666666666666" y="0.0" width="135.99999999999997" height="200"/>
                         </imageView>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="fNH-Z9-pX2">
-                            <rect key="frame" x="20" y="260" width="353" height="180"/>
+                            <rect key="frame" x="20" y="220" width="353" height="180"/>
                             <color key="backgroundColor" red="0.94901960784313721" green="0.95686274509803915" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="180" id="Ydu-Oo-L3b"/>
@@ -122,9 +200,9 @@
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="fNH-Z9-pX2" secondAttribute="trailing" constant="20" id="X5t-ST-DfE"/>
                         <constraint firstItem="fNH-Z9-pX2" firstAttribute="leading" secondItem="1cQ-az-GS2" secondAttribute="leading" constant="20" id="gyE-Wc-jxj"/>
-                        <constraint firstItem="xFn-5m-cpD" firstAttribute="top" secondItem="1cQ-az-GS2" secondAttribute="top" constant="20" id="l5g-0i-5H6"/>
+                        <constraint firstItem="xFn-5m-cpD" firstAttribute="top" secondItem="1cQ-az-GS2" secondAttribute="top" id="l5g-0i-5H6"/>
                         <constraint firstItem="xFn-5m-cpD" firstAttribute="centerX" secondItem="1cQ-az-GS2" secondAttribute="centerX" id="veS-G8-kGp"/>
-                        <constraint firstItem="fNH-Z9-pX2" firstAttribute="top" secondItem="xFn-5m-cpD" secondAttribute="bottom" constant="40" id="zD7-JX-3Z5"/>
+                        <constraint firstItem="fNH-Z9-pX2" firstAttribute="top" secondItem="xFn-5m-cpD" secondAttribute="bottom" constant="20" id="zD7-JX-3Z5"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vph-fS-IaN">
@@ -494,17 +572,19 @@
                 <constraint firstItem="ENC-2S-OZZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="0iD-J2-XvX"/>
                 <constraint firstItem="qaR-oI-xlu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="0qv-IQ-LoI"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ENC-2S-OZZ" secondAttribute="trailing" constant="20" id="3S6-hb-YOf"/>
+                <constraint firstAttribute="trailing" secondItem="g7d-yh-tan" secondAttribute="trailing" id="4cd-Ec-6pt"/>
                 <constraint firstAttribute="bottom" secondItem="WHZ-Qk-tB4" secondAttribute="bottom" id="6I4-4w-c9B"/>
                 <constraint firstItem="XAU-O9-u6r" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="8CF-Lx-0f3"/>
                 <constraint firstItem="AMs-29-EdX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="B3w-Dh-YDZ"/>
                 <constraint firstItem="KdR-CJ-YYl" firstAttribute="top" secondItem="ENC-2S-OZZ" secondAttribute="bottom" constant="10" id="BsO-MP-k1g"/>
                 <constraint firstItem="KdR-CJ-YYl" firstAttribute="leading" secondItem="ENC-2S-OZZ" secondAttribute="leading" id="FQK-nT-Ck8"/>
+                <constraint firstItem="g7d-yh-tan" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="Fce-NA-hmw"/>
                 <constraint firstItem="XAU-O9-u6r" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GUs-eb-T4h"/>
                 <constraint firstItem="1cQ-az-GS2" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="NbN-Ox-csW"/>
                 <constraint firstItem="qaR-oI-xlu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Nwz-BI-Uz1"/>
                 <constraint firstAttribute="trailing" secondItem="AMs-29-EdX" secondAttribute="trailing" id="PB9-RR-Tlb"/>
                 <constraint firstAttribute="trailing" secondItem="qaR-oI-xlu" secondAttribute="trailing" id="Rey-Lc-dAS"/>
-                <constraint firstItem="ENC-2S-OZZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="24" id="UPH-bz-pJq"/>
+                <constraint firstItem="ENC-2S-OZZ" firstAttribute="top" secondItem="g7d-yh-tan" secondAttribute="bottom" constant="16" id="UR3-rq-MzZ"/>
                 <constraint firstAttribute="trailing" secondItem="vph-fS-IaN" secondAttribute="trailing" id="VBF-Xc-tXX"/>
                 <constraint firstItem="AMs-29-EdX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="VNR-jN-HrW"/>
                 <constraint firstAttribute="bottom" secondItem="qaR-oI-xlu" secondAttribute="bottom" id="W0E-nA-4mP"/>
@@ -518,11 +598,13 @@
                 <constraint firstAttribute="bottom" secondItem="XAU-O9-u6r" secondAttribute="bottom" id="sB3-hT-ITJ"/>
                 <constraint firstItem="vph-fS-IaN" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="uz8-j8-Mfm"/>
                 <constraint firstItem="WHZ-Qk-tB4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="vAa-0u-DYj"/>
+                <constraint firstItem="g7d-yh-tan" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="wSO-0y-xer"/>
             </constraints>
             <point key="canvasLocation" x="48" y="20"/>
         </view>
     </objects>
     <resources>
+        <image name="ad_tag" width="25" height="14"/>
         <image name="app_icon" width="136" height="200"/>
         <image name="bg" width="360" height="760"/>
         <image name="clean_bg" width="230" height="48"/>
